--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3854,7 +3854,7 @@ input, select, textarea {
 		background-image: url("../../images/passSafe/fgraphic.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size: contain;
+		background-size:cover;
 		text-align: center;
 	}
 
