--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2721,7 +2721,6 @@ input, select, textarea {
 		}
 
 	.spotlight .content {
-		text-align: justify;
 		padding: 2em 3.5em 0.1em 4em ;
 		-moz-order: 2;
 		-webkit-order: 2;
@@ -2729,6 +2728,9 @@ input, select, textarea {
 		order: 2;
 		max-width: 48em;
 		width: 50%;
+	}
+	.spotlight .content p{
+		text-align: justify;
 	}
 
 	.spotlight:nth-child(2n) {
